changes related to channel API https://docs.google.com/spreadsheets/d/1O0n_ltkYCb_TTEnFB4Ko1qNjNiUuPfxHr14SDlIOYIE/edit#gid=2110406741
