# src/modules/Messaging/dtos/channel.dto.ts
@@ -1,21 +1,24 @@
-import { IsString, IsEmail, IsNotEmpty, IsAlpha, IsOptional } from 'class-validator';
+import { IsString, IsEmail, IsNotEmpty, IsAlpha, IsOptional, IsJSON, IsObject } from 'class-validator';
 
 export class CreateChannelDto {
+  @IsString()
+  @IsNotEmpty()
+  public channelId: string;
+
   @IsString()
   @IsNotEmpty()
   public channelType: string;
 
   @IsString()
   @IsNotEmpty()
-  public name: string;
+  public channelName: string;
 
   @IsString()
   @IsNotEmpty()
-  public description: string;
+  public channelDescription: string;
 
-  // @IsAlpha()
-  @IsNotEmpty()
-  public configJSON: string;
+  @IsObject()
+  public channelAdaptor: any;
 
   @IsString()
   @IsOptional()
@@ -27,11 +30,52 @@ export class CreateChannelDto {
 
   @IsString()
   @IsOptional()
-  public createdBy: number;
+  public createdBy: string;
 
   @IsString()
   @IsOptional()
-  public updatedBy: number;
+  public updatedBy: string;
+
+  @IsString()
+  @IsOptional()
+  public isDeleted: boolean;
+}
+
+export class UpdateChannelDto {
+
+  @IsString()
+  @IsNotEmpty()
+  public channelType: string;
+
+  @IsString()
+  @IsNotEmpty()
+  public channelName: string;
+
+  @IsString()
+  @IsNotEmpty()
+  public channelDescription: string;
+
+  // @IsAlpha()
+  // @IsString()
+  // @IsNotEmpty()
+  @IsObject()
+  public channelAdaptor: any;
+
+  @IsString()
+  @IsOptional()
+  public createdAt: Date;
+
+  @IsString()
+  @IsOptional()
+  public updatedAt: Date;
+
+  @IsString()
+  @IsOptional()
+  public createdBy: string;
+
+  @IsString()
+  @IsOptional()
+  public updatedBy: string;
 
   @IsString()
   @IsOptional()
