# src/modules/Messaging/routes/channel.route.ts
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 import ChannelController from '@/modules/Messaging/controllers/channel.controller';
-import { CreateChannelDto } from '@/modules/Messaging/dtos/channel.dto';
+import { CreateChannelDto, UpdateChannelDto } from '@/modules/Messaging/dtos/channel.dto';
 import { Routes } from '@/common/interfaces/routes.interface';
 import validationMiddleware from '@/common/middlewares/validation.middleware';
 import AuthService from '@/modules/UserTenancy/services/auth.service';
@@ -18,10 +18,7 @@ class ChannelsRoute implements Routes {
     // this.router.get('/channels', this.channelController.getUserChannels);
     this.router.post('/channels', authMiddleware, validationMiddleware(CreateChannelDto, 'body'), this.channelController.createChannel);
     this.router.get('/channels', authMiddleware, this.channelController.getAllChannels);
-    this.router.get('/channels/:id/accessgroup', authMiddleware, this.channelController.getAccessGroupByChannel);
-    this.router.get('/channels/:id', authMiddleware, this.channelController.getChannelById);
-    this.router.delete('/channels/:id', authMiddleware, this.channelController.deleteChannel);
-    this.router.put('/channels/:id', authMiddleware, validationMiddleware(CreateChannelDto, 'body'), this.channelController.updateChannel);
+    this.router.put('/channels/:channelId', authMiddleware, validationMiddleware(UpdateChannelDto, 'body'), this.channelController.updateChannel);
   }
 }
 
